Info editor reports wrong transform options #101928

Closed
opened 2022-10-19 12:54:45 +02:00 by Leon Schittek · 7 comments
Member

System Information
Operating system: macOS-11.6.5-x86_64-i386-64bit 64 Bits
Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-16.5.9

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-18 03:54, hash: e47bf05e85
Worked: (newest version of Blender that worked as expected)

Short description of error
After transforming the info editor will report the transform with the state of use_snap_self, use_snap_edit, use_snap_nonedit flipped.

So when transforming with "Include Active" target activated it will wrongly report use_snap_self = false and vice versa.
When repeating the transform with {key shift R} the state of use_snap_self, use_snap_edit, use_snap_nonedit will flip on each iteration.

Exact steps for others to reproduce the error

  1. Open default startup.
  2. Open an info editor next to the viewport.
  3. Switch to edit mode.
  4. Select a vertex and transform it using {key G}.
  5. Repeat that transform with {key shift R}.
  6. Check in the info editor how e.g. use_snap_self flips between true and false on each iteration.

Note

I stumbled upon this while working on a related area. I think it's just these three boolean properties being set wrong (introduced in 236fda7faf), but I'd like to leave this to someone more familiar with this.

RNA_boolean_set(op->ptr, "use_snap_self", (target & SCE_SNAP_TARGET_NOT_ACTIVE) != 0);
RNA_boolean_set(op->ptr, "use_snap_edit", (target & SCE_SNAP_TARGET_NOT_EDITED) != 0);
RNA_boolean_set(op->ptr, "use_snap_nonedit", (target & SCE_SNAP_TARGET_NOT_NONEDITED) != 0);

I think the check should be == 0 since the flags are describing a negative state.
snap-info-report.mp4

**System Information** Operating system: macOS-11.6.5-x86_64-i386-64bit 64 Bits Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-16.5.9 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-18 03:54, hash: `e47bf05e85` Worked: (newest version of Blender that worked as expected) **Short description of error** After transforming the info editor will report the transform with the state of `use_snap_self`, `use_snap_edit`, `use_snap_nonedit` flipped. So when transforming with "Include Active" target activated it will wrongly report `use_snap_self = false` and vice versa. When repeating the transform with {key shift R} the state of `use_snap_self`, `use_snap_edit`, `use_snap_nonedit` will flip on each iteration. **Exact steps for others to reproduce the error** 1. Open default startup. 2. Open an info editor next to the viewport. 3. Switch to edit mode. 4. Select a vertex and transform it using {key G}. 6. Repeat that transform with {key shift R}. 7. Check in the info editor how e.g. `use_snap_self` flips between `true` and `false` on each iteration. --- **Note** I stumbled upon this while working on a related area. I think it's just these three boolean properties being set wrong (introduced in 236fda7faf), but I'd like to leave this to someone more familiar with this. ``` RNA_boolean_set(op->ptr, "use_snap_self", (target & SCE_SNAP_TARGET_NOT_ACTIVE) != 0); RNA_boolean_set(op->ptr, "use_snap_edit", (target & SCE_SNAP_TARGET_NOT_EDITED) != 0); RNA_boolean_set(op->ptr, "use_snap_nonedit", (target & SCE_SNAP_TARGET_NOT_NONEDITED) != 0); ``` I think the check should be `== 0` since the flags are describing a negative state. [snap-info-report.mp4](https://archive.blender.org/developer/F13714829/snap-info-report.mp4)
Author
Member

Added subscriber: @lone_noel

Added subscriber: @lone_noel
Member

Added subscribers: @mano-wii, @PratikPB2123

Added subscribers: @mano-wii, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

introduced in 236fda7faf

@mano-wii ^

> introduced in 236fda7faf @mano-wii ^

This issue was referenced by 832157cb02

This issue was referenced by 832157cb02f1770439823f8fdf0dd8cccb57a7ca

This issue was referenced by 425e7ca342

This issue was referenced by 425e7ca3421d3a17651701d305140f490f5d2afc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-10-19 16:00:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101928
No description provided.