Fix T101928: transform operator properties saving wrong snap values

The check for the flags should be `== 0` since they are describing a
negative state.

Thanks to @lone_noel for pointing out the error.